# app/schemas/schemas.py
@@ -42,10 +42,6 @@ class ResetGitHubOrganizationRequest(BaseModel):
     custom_domain: str = Field(...,example = "example.com")
     enable_custom_domain: bool = Field(...,example = False)
 
-class OpsgenieAlertsManifestRequest(BaseModel):
-    captain_domain: str  = Field(...,example = 'nonprod.foobar.onglueops.rocks')
-    opsgenie_api_key: str  = Field(...,example = '6825b4ef-4e84-44a1-8450-b46b02852add')
-
 class IncidentioAlertsManifestRequest(BaseModel):
     incidentio_alertmanager_url: str = Field(
         ...,
